# jenkins_demo_ece

./: .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  README.md  postActions.groovy
.github/workflows/: makefile.yml
source/tools/: CMakeLists.txt  circular_buffer.c  circular_buffer.h
tests/: CMakeLists.txt
tests/tools/: CMakeLists.txt  Makefile  circular_buffer_tests.c
tests/unity/: CMakeLists.txt
